Adjust padding to avoid overlap of avatar and collapse cdv button

--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -418,7 +418,7 @@ table { border-collapse: collapse; }
 	left:0;
 	width:50%;
 	padding:10px;
-	padding-right:16px;
+	padding-right:24px;
 	text-overflow:ellipsis;
 	-webkit-user-select:text;
 	user-select:text;
